--- a/cluster.Api/appsettings.json
+++ b/cluster.Api/appsettings.json
@@ -1,12 +1,17 @@
 {
-  "ConnectionStrings": {
-    "con": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BDCluster;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "con": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BDCluster;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    },
+    "Jwt": {
+        "Key": "dafdfsafusadf89u21384134sdhzxvds873&$#%@#$sdaf1234",
+        "Issuer": "https://localhost:7198",
+        "Audience": "https://localhost:7198"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
